[project]
name = "aiagent-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.2",
    "langchain-core>=1.1.3",
    "langgraph>=1.0.4",
    "pydantic>=2.12.5",
    "typing-extensions>=4.15.0",
    "uuid>=1.30",
    "uvicorn>=0.38.0",
    "requests>=2.31.0",
]
